Oauth signup and login added get api created for all user role